--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
         </div>
     </div>
 
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 
 </body>
+
 </HTML>
