Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
                                     <option value="lipstick">口红 (lipstick)</option>
                                     <option value="lip-gloss">唇彩 (lip-gloss)</option>
                                     <option value="primer">妆前隔离 (primer)</option>
+                                    <option value="appliance">家电 </option>
                                 </select>
                             </div>
                             <div>
@@ -403,5 +404,6 @@
 
 </body>
 </HTML>
+
 
 
