--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                     <option value="lipstick">口红 (lipstick)</option>
                                     <option value="lip-gloss">唇彩 (lip-gloss)</option>
                                     <option value="primer">妆前隔离 (primer)</option>
-                                    <option value="appliance">家电 </option>
+                                    <option value="appliance">家电 (home appliance)</option>
                                 </select>
                             </div>
                             <div>
@@ -404,6 +404,7 @@
 
 </body>
 </HTML>
+
 
 
 
