Update fmt.Println message from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -348,9 +348,16 @@
                                     <option value="">-- 请选择类型 --</option>
                                     <option value="foundation">粉底液 (foundation)</option>
                                     <option value="blush">腮红 (blush)</option>
+                                    <option value="highlighter"> 高光 (highlighter)</option>
+                                    <option value="contour"> 阴影 (contour)</option>
+                                    <option value="concealer"> 遮瑕 (concealer)</option>
+                                    <option value="eye-liner"> 眼线 (eye-liner)</option>
+                                    <option value="eye-shade"> 眼影 (eye-shade)</option>
+                                    <option value="lip-liner"> 唇线 (lip-liner)</option>
                                     <option value="lipstick">口红 (lipstick)</option>
                                     <option value="lip-gloss">唇彩 (lip-gloss)</option>
                                     <option value="primer">妆前隔离 (primer)</option>
+                                    <option value="brow">眉毛 (brow)</option>
                                     <option value="appliance">家电 (home appliance)</option>
                                 </select>
                             </div>
@@ -404,6 +411,7 @@
 
 </body>
 </HTML>
+
 
 
 
