add sweater category

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                                     <option value="accessory">配饰 (Accessory)</option>
                                     <option value="cami">吊带 (Cami)</option>
                                     <option value="cardigan">开衫 (Cardigan)</option>
+                                    <option value="sweater">毛衣 (Sweater)</option>
                                     <option value="dress">连衣裙 (Dress)</option>
                                     <option value="jacket">外套 (Jacket)</option>
                                     <option value="long-sleeve">长袖 (Long-sleeve)</option>
